@@ -19,6 +19,7 @@ password =
 # The location of the mpdscribble log file.  The special value
 # "syslog" makes mpdscribble use the local syslog daemon.  On most
 # systems, log messages will appear in /var/log/daemon.log then.
+# "-" means log to stderr (the current terminal).
 log = syslog
 
 # How verbose mpdscribble's logging should be.  Default is 1.
